welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:3: error: illegal start of simple expression
for (tours<- 1 to 6){avance();avance();avance();avance();gauche();avance();avance();droite(;avance();avance();avance();avance();gauche();avance();avance();avance();avance()
                                                                                           ^